[project]
name = "tln"
version = "0.1.0"
description = "TLN information management system"
dependencies = ["click >= 8"]

[project.optional-dependencies]
dev = [
    "pytest >= 8",
    "coverage"
]

[build-system]    
requires = ["flit_core<4"]    
build-backend = "flit_core.buildapi"    
    
[project.scripts]    
tln = "tln:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tln"]
